finish the HTML portion of the header

--- a/style.css
+++ b/style.css
@@ -13,20 +13,28 @@ ul{
 p{
 margin:0px;
 }
+
 a{
     text-decoration: none;
 }
+
 .footer{
     margin-top: auto;
 }
+
 .header{
     display: flex;
     flex-direction: column;
 }
+
 .header-nav{
     display: flex;
     align-items: center;
 }
+
 .header-links{
     margin-left: auto;
+}
+.header-content{
+    display: flex;
 }
