--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body{
     display: flex;
     flex-direction: column;
-    height: 100vh;
     margin:0px;
 }
 
@@ -66,9 +65,14 @@ font-weight: 900;
 margin-left: 100px;
 }
 
+#information{
+height: 100vh;
+}
+
 #information-cards{
     display: flex;
     justify-content: center;
+    margin:48px;
 }
 
 .header{
@@ -103,7 +107,7 @@ margin-left: 100px;
 
 .card{
     width: 15%;
-    height: 200px;
+    height: 300px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -111,7 +115,7 @@ margin-left: 100px;
 }
 .image-placeholder{
     width: 80%;
-    height: 100%;
+    height: 200px;
     border: 5px solid #3882f6;
     border-radius: 15px;
     flex-shrink: 0;
