--- a/style.css
+++ b/style.css
@@ -33,19 +33,39 @@ color: #1F2937;
 text-align: center;
 }
 
-button{
+#call-to-action .button:hover{
+background-color: #1F2937;
+}
+
+.header-container button:hover{
+    background-color: #1F2937;
+    border: 1px solid #E5E7EB;
+}
+.header-container button{
     background-color: #3882f6;
-    border:0px;
+    border:1px solid #1F2937;
     border-radius: 5px;
     color: #f9faf8;
     padding:8px 24px 8px 24px;
     font-weight: 900;
+    cursor: pointer;
 }
 
 #secondary-text,
 a{
     font-size: 18px;
     color: #E5E7EB
+}
+#call-to-action .button{
+    margin-left: auto;
+    margin-right: 80px;
+    background-color: #3882f6;
+    color: #E5E7EB;
+    font-weight: 900;
+    border: 2px solid #E5E7EB;
+    border-radius: 10px;
+    width: 144px;
+    cursor: pointer;
 }
 
 #header-logo{
@@ -88,6 +108,18 @@ height: 100vh;
     font-size: 36px;
     font-style: oblique 10deg;
     color:#1F2937
+}
+
+#call-to-action{
+    background-color: #3882f6;
+    width: 80%;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 80px;
+    display: flex;
+    padding: 100px;
+    color:#E5E7EB;
+    border-radius: 20px;
 }
 
 .header{
